ci: test match game everywhere

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ modules = [
     "src/yeastr_test/macros.py",
     "src/yeastr_test/functional.py",
     "src/yeastr_test/match_game.py",
+    # "src/yeastr_test/test_match_game.py",
 ]
 
 [tool.setuptools]
